# rustify

./: .dockerignore  .env.example  .gitignore  .lefthook.yml  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  Taskfile.yml  build.rs  docker-compose.yml  notes.md  proxychains.conf  readme.md  rust-toolchain.toml
.claude/: settings.local.json
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml
.infra/ansible/: playbook.yml
.infra/grafana/: .gitignore  .terraform.lock.hcl  Justfile  dashboard.tf  provider.tf  variables.tf
.infra/grafana/jsonnet/: dashboard.jsonnet
.infra/grafana/jsonnet/panels/: lyrics.jsonnet  lyrics_stats_ratios.jsonnet  process_timings.jsonnet  (+5 more)
_infra/ansible/: Justfile  playbook.yml  requirements.yml
_infra/grafana/: .env.example  .terraform.lock.hcl  Justfile  dashboard.tf  outputs.tf  provider.tf
_infra/grafana/jsonnet/: dashboard.jsonnet
ansible/: playbook.yml
config/: alloy-config.alloy
docs/: OAUTH_SETUP.md
genius-lyrics-service/: Dockerfile  bun.lockb  deno.json  deps.ts  index.ts  main.ts  package.json
locales/: actions.yml  ai_slop.yml  analyze.yml  commands.yml  currently_playing_none_reason.yml  details.yml  dump.yml  errors.yml  inline_buttons.yml  keyboards.yml  login.yml  magic.yml  profanity_check.yml  rate_limit.yml  recommendasion.yml  register.yml  settings.yml  skippage.yml  song_links.yml  status.yml  user_word_whitelist.yml
lyrics-provider/: Dockerfile  bun.lockb  index.ts  package.json
migrations/: 20220106111347_create_spotify_auth_table.sql  20220106201031_create_track_status_table.sql  20220403150705_add_expires_at_to_spotify_auth_table.sql  20220405155411_add_skips_to_track_status_table.sql  20220413192435_create_user_table.sql  20220417121516_populate_user_table.sql  20220502135617_add_playing_track_to_user_table.sql  20220502142823_add_checked_lyrics_to_user_table.sql  20220504173154_add_suspend_until_to_spotify_auth_table.sql  20220513081509_add_indices_to_tables.sql  20220525175438_add_user_whitelist_table.sql  20220525183257_populate_user_whitelist_table.sql  20241202180025_remove_user_playing_track_field.sql  20241215142809_add_user_lyrics_stat_fields.sql  20250101152807_add_user_config_fields.sql  20250105175127_create_user_word_whitelist_table.sql  20250113173935_add_user_lyrics_analyzed_field.sql  20250113185239_add_user_cfg_analysis_language_field.sql  20250611183715_add_user_magic_playlist_field.sql  20250627114711_add_user_cfg_skippage_secs_field.sql  20250630122715_add_user_locale_field.sql  20250701103842_user_user_fields.sql  20250707152256_user_cfg_skippage_enabled_fields.sql  20250916155820_create_word_stats_table.sql  20250916184730_create_word_definition_table.sql  20251020212245_add_user_role_field.sql  20251024131239_drop_user_whitelist_table.sql  20251024131917_change_default_value_of_status_in_user_table_to_pending.sql  20251024133737_change_user_to_pending_if_no_auth.sql  20251027122257_remove_azlyrics_column.sql  20251104111615_add_user_spotify_state_column.sql  20251104183703_add_uniq_index_on_user_spotify_state_column.sql  20251108133839_user_status_blocked_to_bot_blocked.sql  20251108155214_user_status_renames.sql  20251108182355_add_spotify_auth_user_id_index.sql  20251213132308_add_ref_code_to_user_table.sql  20260107121012_create_track_language_stats_table.sql  20260114111156_fix_none_items_in_track_language_stats.sql  20260302172253_add_user_cfg_ai_slop_detection_field.sql  20260308152848_add_ai_slop_detection_counters.sql
src/: app.rs  cache.rs  commands.rs  error_handler.rs  errors.rs  genius.rs  inline_buttons.rs  keyboards.rs  lib.rs  logger.rs  lyrics.rs  magic_service.rs  main.rs  main.rs_  metrics.rs  profanity.rs  recommendasion_service.rs  rickroll.rs  serde_utils.rs  skippage_service.rs  spotify.rs  spotify_auth_service.rs  state.rs  telegram.rs  tick.rs  track_status_service.rs  user.rs  user_service.rs  user_word_whitelist_service.rs  utils.rs  whitelist.rs  word_analyzer.rs  word_definition_service.rs  word_stats_service.rs  words_analyzer.rs
src/cli/: users.rs
src/entity/: mod.rs  prelude.rs  spotify_auth.rs  track_language_stats.rs  track_status.rs  user.rs  user_whitelist.rs  user_word_whitelist.rs  word_definition.rs  word_stats.rs
src/errors/: anyhow.rs  context.rs  generic_error.rs
src/infrastructure/: cache.rs  error_handler.rs  logger.rs  mod.rs
src/lyrics/: azlyrics.rs  genius.rs  lrclib.rs  mod.rs  musixmatch.rs  utils.rs
src/metrics/: influx.rs  influx_collector.rs  mod.rs  prometheus.rs  prometheus_collector.rs
src/queue/: mod.rs  profanity_check.rs  track_check.rs
src/services/: magic.rs  metrics.rs  mod.rs  notification.rs  rate_limit.rs  recommendasion.rs  skippage.rs  song_link.rs  spotify_polling_backoff.rs  throttle.rs  track_language_stats.rs  track_status.rs  user.rs  user_word_whitelist.rs  word_definition.rs  word_stats.rs
src/services/ai_slop_detection/: mod.rs  shlabs.rs  soul_over_ai.rs  spot_the_ai.rs  spotify_ai_blocker.rs
src/spotify/: auth.rs  errors.rs  mod.rs  utils.rs
src/telegram/: commands.rs  commands_admin.rs  errors.rs  handlers.rs  helpers.rs  inline_buttons.rs  inline_buttons_actions.rs  inline_buttons_admin.rs  keyboards.rs  mod.rs  utils.rs
src/telegram/actions/: admin_stats.rs  admin_users.rs  ai_slop_detection.rs  analyze.rs  broadcast.rs  cancel.rs  cleanup.rs  details.rs  dislike.rs  global_stats.rs  ignore.rs  language.rs  like.rs  login.rs  magic.rs  mod.rs  recommendasion.rs  register.rs  settings.rs  skippage.rs  song_links.rs  start.rs  stats.rs  user_word_whitelist.rs  whitelist.rs  word_definition.rs
src/telegram/handlers/: admin_commands.rs  cleanup.rs  commands.rs  details.rs  dislike.rs  inline_buttons.rs  keyboards.rs  message.rs  mod.rs  raw.rs  raw_message.rs  register.rs  stats.rs  url.rs  whitelist.rs
src/tick/: bad_words.rs  disliked_track.rs  errors.rs  magic.rs  mod.rs  profanity_check.rs  skippage.rs  user.rs
src/utils/: general.rs  mod.rs  serde.rs  teloxide.rs
src/workers/: bot.rs  mod.rs  queues.rs  server.rs  track_check.rs
(+16 files in other folders)
