[package]
name = "rustify"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
async-openai = { version = "0.32.4", features = ["chat-completion"] }
axum = "0.8.8"
apalis = { version = "1.0.0-rc.3", features = ["timeout"] }
apalis-redis = "1.0.0-rc.3"
backon = "1.6.0"
# base64 = "0.22.1"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
convert_case = "0.11.0"
deadpool-redis = "0.22.1"
derive_more = { version = "2.1.1", features = ["from", "deref"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.31"
indoc = "2.0.7"
influxdb = { version = "0.7.2", features = ["derive"] }
itertools = "0.14.0"
rand = "0.10.0"
regex = { version = "1.12.3", features = ["pattern"] }
reqwest = { version = "0.13", features = ["json", "query"] }
reqwest-compat = { package = "reqwest", version = "0.12" }
rspotify = "0.15.3"
rust-i18n = "3.1.5"
rustrict = { version = "0.7.38", features = ["customize"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres"] }
strsim = "0.11.1"
strum = "0.27.2"
strum_macros = "0.27.2"
# todo try to remove after next teloxide upgrade
# tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.44"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5.8"
uuid = "1.20.0"
whatlang = { version = "0.18.0", features = ["serde"] }
redis = "0.32.7"
prometheus = { version = "0.14.0", features = ["push", "process"] }

[dependencies.isolang]
features = ["serde"]
version = "2.4.0"

[dependencies.sea-orm]
default-features = false
version = "1.1.19"
features = [
    "runtime-tokio-native-tls",
    "macros",
    "sqlx-postgres",
    "debug-print",
    "with-chrono",
    "with-uuid",
]

[dependencies.teloxide]
version = "0.17.0"
features = ["macros", "bincode-serializer", "redis-storage"]

[dependencies.tokio]
version = "1.49.0"
features = ["rt-multi-thread", "macros"]

[features]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = 1

[lints.clippy]
unwrap_used = "warn"

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"

unnecessary_literal_bound = "allow"
match_same_arms = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

missing_const_for_fn = "allow"
future_not_send = "allow"

unused_trait_names = "warn"
str_to_string = "warn"
